--- a/.env.example
+++ b/.env.example
@@ -5,4 +5,7 @@ POSTGRES_PORT=5432
 POSTGRES_DB=ecommerce_chat
 POSTGRES_USER=chat_user
 POSTGRES_PASSWORD=chat_password
+DATABASE_URL_OVERRIDE=
+DB_AUTO_CREATE=true
+DB_SEED_FAQ_DEFAULTS=true
 REDIS_URL=redis://localhost:6379/0
