--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,16 @@
 APP_ENV=local
 API_PORT=8000
+
+# Option A: Docker Postgres
 POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
 POSTGRES_DB=ecommerce_chat
 POSTGRES_USER=chat_user
 POSTGRES_PASSWORD=chat_password
+
+# Option B: Local Postgres
 DATABASE_URL_OVERRIDE=
-DB_AUTO_CREATE=true
+
+DB_AUTO_CREATE=false
 DB_SEED_FAQ_DEFAULTS=true
 REDIS_URL=redis://localhost:6379/0
