feat: database migrations created

--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,11 @@
 APP_ENV=local
 API_PORT=8000
 
-# Option A: Docker Postgres
-POSTGRES_HOST=localhost
+POSTGRES_HOST=127.0.0.1
 POSTGRES_PORT=5432
 POSTGRES_DB=ecommerce_chat
 POSTGRES_USER=chat_user
 POSTGRES_PASSWORD=chat_password
-
-# Option B: Local Postgres
-DATABASE_URL_OVERRIDE=
 
 DB_AUTO_CREATE=false
 DB_SEED_FAQ_DEFAULTS=true
