feat: agent login flow

--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,6 @@ POSTGRES_PASSWORD=chat_password
 DB_AUTO_CREATE=false
 DB_SEED_FAQ_DEFAULTS=true
 REDIS_URL=redis://localhost:6379/0
+
+AGENT_AUTH_SECRET=local-dev-agent-auth-secret-change-me
+AGENT_AUTH_TOKEN_TTL_MINUTES=480
