--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,5 +39,8 @@ target-version = "py311"
 [tool.ruff.lint]
 select = ["E", "F", "I", "B", "UP"]
 
+[tool.ruff.lint.flake8-bugbear]
+extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Header"]
+
 [tool.hatch.build.targets.wheel]
 packages = ["app"]
