--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,8 @@ dev = [
   "pytest>=8.3.0",
   "pytest-asyncio>=0.25.0",
   "ruff>=0.9.0",
-  "mypy>=1.14.0"
+  "mypy>=1.14.0",
+  "pre-commit>=3.8.0"
 ]
 
 [tool.pytest.ini_options]
