security: add production CORS, host, HTTPS and secret guards

--- a/.env.example
+++ b/.env.example
@@ -11,5 +11,9 @@ DB_AUTO_CREATE=false
 DB_SEED_FAQ_DEFAULTS=true
 REDIS_URL=redis://localhost:6379/0
 
-AGENT_AUTH_SECRET=local-dev-agent-auth-secret-change-me
+AGENT_AUTH_SECRET=replace-with-strong-secret-min-32-chars
 AGENT_AUTH_TOKEN_TTL_MINUTES=480
+
+CORS_ALLOWED_ORIGINS_RAW=http://127.0.0.1:5173,http://localhost:5173
+TRUSTED_HOSTS_RAW=127.0.0.1,localhost
+FORCE_HTTPS=false
